[package]
name = "font-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive", "extern_crate_std", "min_const_generics"] }
rusttype = { version = "0.8", features = ["gpu_cache"] }
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27.3"

